force-app/main/default/objects/Account/fields/Detalles_de_la_baja__c.field-meta.xml
<CustomField>
    <fullName>Detalles_de_la_baja__c</fullName>
    <label>Detalles de la baja</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo_baja__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Consumo</fullName>
            </value>
            <value>
                <fullName>Pagos</fullName>
            </value>
            <value>
                <fullName>Técnico/Seguridad</fullName>
            </value>
            <value>
                <fullName>Precio Gas</fullName>
            </value>
            <value>
                <fullName>Precio Servicios</fullName>
            </value>
            <value>
                <fullName>Imposibilidad de mantener servicios PS</fullName>
            </value>
            <value>
                <fullName>Otras condiciones</fullName>
            </value>
            <value>
                <fullName>Servicio Entrega</fullName>
            </value>
            <value>
                <fullName>Servicio técnico</fullName>
            </value>
            <value>
                <fullName>Servicio Facturación</fullName>
            </value>
            <value>
                <fullName>Atención recibida</fullName>
            </value>
            <value>
                <fullName>Otros (especificar en observaciones)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>