force-app/main/default/objects/Account/fields/DNI_vedarero_o_falso__c.field-meta.xml
<CustomField>
    <fullName>DNI_vedarero_o_falso__c</fullName>
    <formula>IF(LEFT(Id_Fiscal__c,1)=&quot;1&quot;  ||  LEFT(Id_Fiscal__c,1)=&quot;2&quot;  ||  LEFT(Id_Fiscal__c,1)=&quot;3&quot; ||  LEFT(Id_Fiscal__c,1)=&quot;3&quot; ||  LEFT(Id_Fiscal__c,1)=&quot;4&quot; ||  LEFT(Id_Fiscal__c,1)=&quot;5&quot; ||  LEFT(Id_Fiscal__c,1)=&quot;6&quot; ||  LEFT(Id_Fiscal__c,1)=&quot;7&quot; ||  LEFT(Id_Fiscal__c,1)=&quot;8&quot; ||  LEFT(Id_Fiscal__c,1)=&quot;9&quot;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI vedarero o falso</label>
    <type>Checkbox</type>
</CustomField>