force-app/main/default/objects/Account/fields/Email3__c.field-meta.xml
<CustomField>
    <fullName>Email3__c</fullName>
    <description>Correo electrónico principal de la cuenta, es el primero que se inserta.</description>
    <label>Email3</label>
    <type>Email</type>
</CustomField>