force-app/main/default/objects/Account/fields/Emp_Gesti_n_Impagados__c.field-meta.xml
<CustomField>
    <fullName>Emp_Gesti_n_Impagados__c</fullName>
    <label>Emp. Gestión Impagados</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gescobro</fullName>
            </value>
            <value>
                <fullName>Corporación Legal</fullName>
            </value>
            <value>
                <fullName>Concurso acreedores</fullName>
            </value>
            <value>
                <fullName>Mazars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>