force-app/main/default/objects/Account/fields/Entrega_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Entrega_de_producto__c</fullName>
    <label>Entrega de producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automática</fullName>
            </value>
            <value>
                <fullName>Semi-automática</fullName>
            </value>
            <value>
                <fullName>Bajo pedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>