force-app/main/default/objects/Account/fields/Enviado_welcome_pack__c.field-meta.xml
<CustomField>
    <fullName>Enviado_welcome_pack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado welcome pack</label>
    <type>Checkbox</type>
</CustomField>