force-app/main/default/objects/Account/fields/Error_Sync__c.field-meta.xml
<CustomField>
    <fullName>Error_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Sync</label>
    <type>Checkbox</type>
</CustomField>