force-app/main/default/objects/Account/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente existente</fullName>
            </value>
            <value>
                <fullName>Nueva oportunidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>