force-app/main/default/objects/Account/fields/Estado_baja__c.field-meta.xml
<CustomField>
    <fullName>Estado_baja__c</fullName>
    <label>Estado baja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pdte. Contacto</fullName>
            </value>
            <value>
                <fullName>Pdte. Acuerdo</fullName>
            </value>
            <value>
                <fullName>Pdte. Informe Visita</fullName>
            </value>
            <value>
                <fullName>Pdte. Decisión</fullName>
            </value>
            <value>
                <fullName>Pdte. Abogados</fullName>
            </value>
            <value>
                <fullName>Pdte. Gestión Backoffice</fullName>
            </value>
            <value>
                <fullName>Pdte. Cobro</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
            <value>
                <fullName>Cliente sin viabilidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>