force-app/main/default/objects/Account/fields/Fact_ano_en_curso__c.field-meta.xml
<CustomField>
    <fullName>Fact_ano_en_curso__c</fullName>
    <label>Fact. Año en curso</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>