force-app/main/default/objects/Account/fields/Facutraci_n__c.field-meta.xml
<CustomField>
    <fullName>Facutraci_n__c</fullName>
    <label>Facturación (miles de euros)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>