force-app/main/default/objects/Account/fields/Fecha_baja_t_cnica__c.field-meta.xml
<CustomField>
    <fullName>Fecha_baja_t_cnica__c</fullName>
    <description>No visible - no borrar -</description>
    <label>Fecha baja técnica</label>
    <type>Date</type>
</CustomField>