force-app/main/default/objects/Account/fields/Fecha_cierre_baja__c.field-meta.xml
<CustomField>
    <fullName>Fecha_cierre_baja__c</fullName>
    <label>Fecha cierre baja</label>
    <type>Date</type>
</CustomField>