force-app/main/default/objects/Account/fields/Fecha_entrada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_entrada__c</fullName>
    <description>Se usa para cambios de titular</description>
    <label>Fecha entrada</label>
    <type>Date</type>
</CustomField>