force-app/main/default/objects/Account/fields/Fecha_env_o_pack__c.field-meta.xml
<CustomField>
    <fullName>Fecha_env_o_pack__c</fullName>
    <label>Fecha envío welcome pack</label>
    <type>Date</type>
</CustomField>