force-app/main/default/objects/Account/fields/Fecha_ltima_Sync__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ltima_Sync__c</fullName>
    <label>Fecha última Sync</label>
    <type>DateTime</type>
</CustomField>