force-app/main/default/objects/Account/fields/Ficha_de_baja_numero__c.field-meta.xml
<CustomField>
    <fullName>Ficha_de_baja_numero__c</fullName>
    <label>Ficha de baja numero</label>
    <length>10</length>
    <type>Text</type>
</CustomField>