force-app/main/default/objects/Account/fields/Forma_de_constitucion__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_constitucion__c</fullName>
    <label>Forma de constitución</label>
    <length>100</length>
    <type>Text</type>
</CustomField>