force-app/main/default/objects/Account/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>domiciliación bancaria</fullName>
            </value>
            <value>
                <fullName>transferencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>