force-app/main/default/objects/Account/fields/Gasto_de_Retirada_o_Desmantelamiento__c.field-meta.xml
<CustomField>
    <fullName>Gasto_de_Retirada_o_Desmantelamiento__c</fullName>
    <inlineHelpText>sin IVA</inlineHelpText>
    <label>Gasto de Retirada o Desmantelamiento</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>