force-app/main/default/objects/Account/fields/Id_banco_navisio__c.field-meta.xml
<CustomField>
    <fullName>Id_banco_navisio__c</fullName>
    <label>Id banco navisio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>