force-app/main/default/objects/Account/fields/Id_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Id_Fiscal__c</fullName>
    <inlineHelpText>DNI/NIE/CIF</inlineHelpText>
    <label>ID Fiscal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>