force-app/main/default/objects/Account/fields/Id_Navision__c.field-meta.xml
<CustomField>
    <fullName>Id_Navision__c</fullName>
    <externalId>true</externalId>
    <label>Número cliente Navision</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>