force-app/main/default/objects/Account/fields/Importe_pedidos_Pdte__c.field-meta.xml
<CustomField>
    <fullName>Importe_pedidos_Pdte__c</fullName>
    <label>Importe pedidos Pdte.</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>