force-app/main/default/objects/Account/fields/Importe_resuloci_n__c.field-meta.xml
<CustomField>
    <fullName>Importe_resuloci_n__c</fullName>
    <label>Importe resolución</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>