force-app/main/default/objects/Account/fields/Media_consumo_anual__c.field-meta.xml
<CustomField>
    <fullName>Media_consumo_anual__c</fullName>
    <label>Media consumo anual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>