force-app/main/default/objects/Account/fields/Mobile_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_No__c</fullName>
    <label>Teléfono secundario</label>
    <type>Phone</type>
</CustomField>