force-app/main/default/objects/Account/fields/Motivo_baja__c.field-meta.xml
<CustomField>
    <fullName>Motivo_baja__c</fullName>
    <label>Motivo baja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resolución por incumplimiento</fullName>
                <label>Resolución por incumplimiento cliente</label>
            </value>
            <value>
                <fullName>Desconocido</fullName>
            </value>
            <value>
                <fullName>Cese actividad</fullName>
                <label>Cese actividad / venta vivienda</label>
            </value>
            <value>
                <fullName>Condiciones contractuales</fullName>
            </value>
            <value>
                <fullName>Insatisfecho servicio ofrecido</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Cambio de titular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>