force-app/main/default/objects/Account/fields/Nombre_erroneo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_erroneo__c</fullName>
    <formula>IF(AND( contains(LastName , FirstName ), (RecordType.Id=&apos;01257000000kgIr&apos;  ) ), TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre erróneo</label>
    <type>Checkbox</type>
</CustomField>