force-app/main/default/objects/Account/fields/Notas_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Notas_Maestro__c</fullName>
    <description>Descripción de excepciones de clientes</description>
    <label>Notas Maestro</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>