force-app/main/default/objects/Account/fields/Num_oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Num_oportunidades__c</fullName>
    <description>Campo resumen con número de oportunidades vinculadas</description>
    <label>Num oportunidades</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>