force-app/main/default/objects/Account/fields/Observaciones_baja__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_baja__c</fullName>
    <label>Observaciones baja</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>