force-app/main/default/objects/Account/fields/Origen_baja__c.field-meta.xml
<CustomField>
    <fullName>Origen_baja__c</fullName>
    <description>SR-2009</description>
    <label>Origen baja</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baja instalación ID</fullName>
            </value>
            <value>
                <fullName>Bajas en bloque</fullName>
            </value>
            <value>
                <fullName>Listado low takers</fullName>
            </value>
            <value>
                <fullName>Listado no-takers</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>