force-app/main/default/objects/Account/fields/Origen_de_modificacion__c.field-meta.xml
<CustomField>
    <fullName>Origen_de_modificacion__c</fullName>
    <description>Indica de dónde procede el cambio en la Cuenta</description>
    <label>Origen de modificación IBAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>