force-app/main/default/objects/Account/fields/otros_contactos__c.field-meta.xml
<CustomField>
    <fullName>otros_contactos__c</fullName>
    <label>Otros contactos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>