force-app/main/default/objects/Account/fields/Pais_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Pais_Facturacion__c</fullName>
    <defaultValue>&quot;España&quot;</defaultValue>
    <label>Pais</label>
    <length>100</length>
    <type>Text</type>
</CustomField>