force-app/main/default/objects/Account/fields/Poblacion_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Poblacion_Facturacion__c</fullName>
    <label>Población</label>
    <length>100</length>
    <type>Text</type>
</CustomField>