force-app/main/default/objects/Account/fields/Prescriptor__c.field-meta.xml
<CustomField>
    <fullName>Prescriptor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescriptor</label>
    <referenceTo>Proveedor__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>