force-app/main/default/objects/Account/fields/Prescriptor_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Prescriptor_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescriptor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>