force-app/main/default/objects/Account/fields/Prioridad_2__c.field-meta.xml
<CustomField>
    <fullName>Prioridad_2__c</fullName>
    <label>Prioridad 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente FARMING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>