force-app/main/default/objects/Account/fields/Procede_de_conversion__c.field-meta.xml
<CustomField>
    <fullName>Procede_de_conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para comprobar en el trigger de oportunidad desde donde se ha creado</description>
    <label>Procede de conversión</label>
    <type>Checkbox</type>
</CustomField>