force-app/main/default/objects/Account/fields/Rating_informa__c.field-meta.xml
<CustomField>
    <fullName>Rating_informa__c</fullName>
    <inlineHelpText>Sobre 20</inlineHelpText>
    <label>Rating informa</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>