force-app/main/default/objects/Account/fields/Recibir_factura_por_mail__c.field-meta.xml
<CustomField>
    <fullName>Recibir_factura_por_mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recibir factura por mail</label>
    <type>Checkbox</type>
</CustomField>