force-app/main/default/objects/Account/fields/recordval__rv2BillingAddressStatusCode__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2BillingAddressStatusCode__c</fullName>
    <label>RV Billing Address Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>