force-app/main/default/objects/Account/fields/recordval__rv2Status__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2Status__c</fullName>
    <label>RV Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>recordval__RV2RecordStatus</valueSetName>
    </valueSet>
</CustomField>