force-app/main/default/objects/Account/fields/Reminder_Terms__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Terms__c</fullName>
    <label>Reminder Terms. Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>INSP INT.</fullName>
            </value>
            <value>
                <fullName>REV. INT.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>