force-app/main/default/objects/Account/fields/Rentabilidad_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Rentabilidad_Cliente__c</fullName>
    <label>Rentabilidad Cliente</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>