force-app/main/default/objects/Account/fields/RV_Store_date_and_time_of_validation_pho__c.field-meta.xml
<CustomField>
    <fullName>RV_Store_date_and_time_of_validation_pho__c</fullName>
    <label>RV Store date and time of validation pho</label>
    <type>DateTime</type>
</CustomField>