force-app/main/default/objects/Account/fields/RV_Store_status_message_phone__c.field-meta.xml
<CustomField>
    <fullName>RV_Store_status_message_phone__c</fullName>
    <label>RV Store status message phone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>