force-app/main/default/objects/Account/fields/Saldo_DL__c.field-meta.xml
<CustomField>
    <fullName>Saldo_DL__c</fullName>
    <label>Saldo (DL)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>